# ReluctorOperations

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters
include/: ReluctorResult.h
include/Operations/: Operation_ReluctorGM24x.h  Operation_ReluctorUniversal1x.h  Operation_ReluctorUniversal2x.h  Operation_ReluctorUniversalMissingTeeth.h  ReluctorOperationFactoryRegister.h
libs/CrankCamDecoders/include/CrankCamDecoders/: Gm24xDecoderNew.h  ICrankCamDecoder.h  ICrankCamDecoderNew.h  Universal2xDecoder.h
libs/CrankCamDecoders/src/: Gm24xDecoder.cpp  Gm24xDecoderNew.cpp  Universal2xDecoder.cpp
libs/CrankCamDecodersMockedObjects/include/: MockCrankCamDecoder.h
libs/CrankCamDecodersUnitTests/: CMakeLists.txt
libs/CrankCamDecodersUnitTests/src/: Gm24xDecoderTests.cpp  Gm24xNewDecoderTests.cpp
libs/Decoder/: CMakeLists.txt
libs/Decoder/include/Decoder/: Gm24xDecoder.h  IDecoder.h  Universal2xDecoder.h
libs/Decoder/src/: Gm24xDecoder.cpp  Universal2xDecoder.cpp
libs/DecoderMockedObjects/: CMakeLists.txt
libs/DecoderMockedObjects/include/: MockDecoder.h
libs/DecoderUnitTests/: CMakeLists.txt
libs/DecoderUnitTests/src/: Gm24xDecoderTests.cpp
libs/Reluctor/include/Operations/: Gm24xReluctor.h  ReluctorResult.h
libs/Reluctor/include/Reluctor/: Gm24xReluctor copy.h  IReluctor.h  Operation_ReluctorGM24x.h  Operation_ReluctorGM24xPosition.h  Operation_ReluctorGM24xRPM.h  ReluctorResult.h  Universal2xReluctor.h
libs/Reluctor/src/: Gm24xReluctor.cpp  Universal2xReluctor.cpp
libs/Reluctor/src/Operations/: Gm24xReluctor copy.cpp  Operation_ReluctorGM24x.cpp  Universal2xReluctor.cpp
libs/ReluctorMockedObjects/include/: MockReluctor.h
libs/ReluctorUnitTests/: CMakeLists.txt
libs/ReluctorUnitTests/src/: Gm24xReluctorTests.cpp  Operation_ReluctorGM24xPositionTests.cpp  Operation_ReluctorGM24xTests.cpp
src/Operations/: Operation_ReluctorGM24x.cpp  Operation_ReluctorUniversal1x.cpp  Operation_ReluctorUniversal2x.cpp  Operation_ReluctorUniversalMissingTeeth.cpp  ReluctorOperationFactoryRegister.cpp
test/: CMakeLists.txt
test/src/: Gm24xReluctorTests.cpp  Operation_ReluctorGM24xTests.cpp  Operation_ReluctorUniversalMissingTeethTests.cpp
(+6 files in other folders)
